<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_marginTop="90dp"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/profile_foto"/>
    <TextView
        android:text="@string/lukmanul_hakim"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/lukmanul160_gmail_com"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/baru_belajar_android_dan_ingin_menjadi_yang_tebaik_dan_terus_mencoba_dan_coba"
        android:textColor="@android:color/black"
        android:textSize="17sp" />

</LinearLayout>